添加了与服务器交互功能，第一页的四个按钮可以用了

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">我的垃圾</string>
+    <string name="app_name">a我的垃圾test</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
